WalkingBass middle of dev/testing (a fine romance). Added unit test for ChordType getSimilarityScore().